Fix button alignment bug

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -42,11 +42,6 @@ $_primary-btn-size: 4.5rem;
     width: 1.5rem;
 }
 
-.btn__icon--large {
-    height: 2rem;
-    width: 2rem;
-}
-
 .btn--toggle {
     border-radius: 0;
     box-shadow: none;
